@@ -1,3 +1,7 @@
+### 2022-08-24
+
+1. Add observer characterData in VPopup
+
 ### 2022-08-23
 
 1. Fixed update center in VPopup
